--- a/mobile/src/main/res/layout/activity_my.xml
+++ b/mobile/src/main/res/layout/activity_my.xml
@@ -4,4 +4,15 @@
   android:layout_height="match_parent"
   android:orientation="vertical">
 
+  <android.support.v4.view.ViewPager
+    android:id="@+id/view_pager"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="100" />
+
+  <com.ataulm.basic.EntryInputView
+    android:id="@+id/entry_input_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
+
 </LinearLayout>
