--- a/mobile/src/main/res/layout/merge_entry.xml
+++ b/mobile/src/main/res/layout/merge_entry.xml
@@ -3,7 +3,16 @@
 
   <TextView
     android:id="@+id/entry_text_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:layout_weight="100" />
+
+  <Button
+    android:id="@+id/entry_button_see_all_actions"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|right"
+    android:text="..." />
 
 </merge>
