--- a/mobile/src/main/res/layout/activity_chunks.xml
+++ b/mobile/src/main/res/layout/activity_chunks.xml
@@ -1,23 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ataulm.chunks.ChunksScreen xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/chunks_screen"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
-
-  <com.ataulm.chunks.DayTabsWidget
-    android:id="@+id/tabs"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-  <android.support.v4.view.ViewPager
-    android:id="@+id/view_pager"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="100" />
-
-  <com.ataulm.chunks.EntryInputView
-    android:id="@+id/entry_input_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-</LinearLayout>
+  android:layout_height="match_parent" />
