--- a/mobile/src/main/res/layout/view_entry.xml
+++ b/mobile/src/main/res/layout/view_entry.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ataulm.chunks.EntryView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ataulm.chunks.EntryWidget xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content" />
