--- a/mobile/src/main/res/color/day_tabs_tab_text.xml
+++ b/mobile/src/main/res/color/day_tabs_tab_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:state_activated="true" android:color="@android:color/black" />
-  <item android:color="@android:color/darker_gray" />
+  <item android:state_activated="true" android:color="@color/white" />
+  <item android:color="@color/white_54_on_deep_sky_blue" />
 </selector>
