--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme"
+    parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
   </style>
 
@@ -10,12 +11,20 @@
   <style name="DayTabs.Tab">
     <item name="android:gravity">center</item>
     <item name="android:textColor">@color/day_tabs_tab_text</item>
+    <item name="android:textSize">18sp</item>
+    <item name="textFont">robotoRegular</item>
   </style>
 
   <style name="Chunks" />
 
-  <style name="Chunks.EntryInputWidget">
-    <item name="android:background">@android:color/holo_orange_light</item>
+  <style name="Chunks.Toolbar" />
+
+  <style name="Chunks.Toolbar.Title">
+    <item name="android:textColor">@color/white</item>
+    <item name="android:textSize">20sp</item>
+    <item name="textFont">robotoMedium</item>
   </style>
+
+  <style name="Chunks.EntryInputWidget" />
 
 </resources>
