--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -3,5 +3,6 @@
   <string name="yesterday">Yesterday</string>
   <string name="today">Today</string>
   <string name="tomorrow">Tomorrow</string>
+  <string name="settings">Settings</string>
 
 </resources>
