--- a/mobile/src/main/res/layout/merge_chunks_screen.xml
+++ b/mobile/src/main/res/layout/merge_chunks_screen.xml
@@ -14,7 +14,7 @@
 
     <com.ataulm.chunks.TabsPagerNavigationWidget
       android:id="@+id/chunks_screen_pager_navigation_widget"
-      style="@style/Chunks.TabsPagerNavigationWidget.Root"
+      style="@style/Chunks.TabsPagerNavigationWidget.View"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
 
