--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
   <!-- Base application theme. -->
   <style name="AppTheme"
     parent="Theme.AppCompat.Light.NoActionBar">
-    <!-- Customize your theme here. -->
+    <item name="android:windowBackground">@color/alabaster</item>
   </style>
 
   <style name="Chunks" />
@@ -18,7 +18,7 @@
 
   <style name="Chunks.TabsPagerNavigationWidget" />
 
-  <style name="Chunks.TabsPagerNavigationWidget.Root">
+  <style name="Chunks.TabsPagerNavigationWidget.View">
     <item name="tabLayoutId">@layout/view_chunks_tab</item>
     <item name="tabsLeftPadding">0dp</item>
     <item name="indicatorColor">@color/white</item>
@@ -33,5 +33,13 @@
   </style>
 
   <style name="Chunks.EntryInputWidget" />
+
+  <style name="Chunks.EntryWidget" />
+
+  <style name="Chunks.EntryWidget.View">
+    <item name="android:background">@color/white</item>
+    <item name="android:paddingLeft">8dp</item>
+    <item name="android:paddingRight">8dp</item>
+  </style>
 
 </resources>
