--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -34,6 +34,14 @@
 
   <style name="Chunks.EntryInputWidget" />
 
+  <style name="Chunks.EntriesPage" />
+
+  <style name="Chunks.EntriesPage.View">
+    <item name="android:paddingTop">8dp</item>
+    <item name="android:paddingBottom">8dp</item>
+    <item name="android:clipToPadding">false</item>
+  </style>
+
   <style name="Chunks.EntryWidget" />
 
   <style name="Chunks.EntryWidget.View">
