--- a/mobile/src/main/res/layout/merge_entry.xml
+++ b/mobile/src/main/res/layout/merge_entry.xml
@@ -12,7 +12,7 @@
     android:id="@+id/entry_button_see_all_actions"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|right"
+    android:layout_gravity="center_vertical"
     android:text="..." />
 
 </merge>
