--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
 
   <!--All colors in the app are defined here-->
-  <color name="deep_sky_blue">#03A9F4</color>
+  <color name="azure">#03A9F4</color>
+  <color name="azure_two">#00A5F7</color>
   <color name="white_54_on_deep_sky_blue">#76C2E4</color>
+  <color name="black_38">#61000000</color>
   <color name="white">#FFFFFF</color>
   <color name="alabaster">#FAFAFA</color>
   <color name="black">#000000</color>
