Remove Add button from input widget
- user can rely on enter/return done button
- might need to add it in again, not sure if this is supported on all devices

--- a/mobile/src/main/res/layout/merge_chunks_screen.xml
+++ b/mobile/src/main/res/layout/merge_chunks_screen.xml
@@ -28,8 +28,9 @@
 
   <com.ataulm.chunks.EntryInputWidget
     android:id="@+id/chunks_screen_empty_input_widget"
-    style="@style/Chunks.EntryInputWidget"
+    style="@style/Chunks.EntryInputWidget.View"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:minHeight="56dp" />
 
 </merge>
