--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -37,6 +37,11 @@
 
   <style name="Chunks.EntryInputWidget" />
 
+  <style name="Chunks.EntryInputWidget.View">
+    <item name="android:background">@color/white</item>
+    <item name="android:elevation">5dp</item>
+  </style>
+
   <style name="Chunks.EntriesPage" />
 
   <style name="Chunks.EntriesPage.View">
