--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
   <!--All colors in the app are defined here-->
   <color name="azure">#03A9F4</color>
+  <color name="cerulean">#039BE5</color>
   <color name="azure_two">#00A5F7</color>
   <color name="white_54_on_deep_sky_blue">#76C2E4</color>
   <color name="black_38">#61000000</color>
