--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/alabaster</item>
+    <item name="colorPrimary">@color/cerulean</item>
   </style>
 
   <style name="AppTheme.CheckBox">
