--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <resources>
 
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme"
+    parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/alabaster</item>
     <item name="colorPrimary">@color/cerulean</item>
+    <item name="colorAccent">@color/azure_two</item>
   </style>
 
   <style name="AppTheme.CheckBox">
@@ -43,6 +45,12 @@
     <item name="android:elevation">5dp</item>
   </style>
 
+  <style name="Chunks.EntryInputWidget.EditText">
+    <item name="android:background">@null</item>
+    <item name="android:paddingLeft">16dp</item>
+    <item name="android:paddingRight">16dp</item>
+  </style>
+
   <style name="Chunks.EntriesPage" />
 
   <style name="Chunks.EntriesPage.View">
@@ -59,7 +67,8 @@
     <item name="android:paddingRight">8dp</item>
   </style>
 
-  <style name="Chunks.EntryWidget.CheckBox" parent="AppTheme">
+  <style name="Chunks.EntryWidget.CheckBox"
+    parent="AppTheme">
     <item name="android:theme">@style/AppTheme.CheckBox</item>
   </style>
 
