--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -4,5 +4,6 @@
   <string name="today">Today</string>
   <string name="tomorrow">Tomorrow</string>
   <string name="settings">Settings</string>
+  <string name="add_a_new_task">Add a new task…</string>
 
 </resources>
