--- a/mobile/src/main/res/layout/view_entry.xml
+++ b/mobile/src/main/res/layout/view_entry.xml
@@ -2,6 +2,4 @@
 <com.ataulm.chunks.EntryWidget xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/Chunks.EntryWidget.View"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_marginLeft="8dp"
-  android:layout_marginRight="8dp" />
+  android:layout_height="wrap_content" />
