--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -47,6 +47,7 @@
 
   <style name="Chunks.EntryInputWidget.EditText">
     <item name="android:background">@null</item>
+    <item name="android:inputType">text</item>
     <item name="android:paddingLeft">16dp</item>
     <item name="android:paddingRight">16dp</item>
   </style>
