--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -55,6 +55,9 @@
   <style name="Chunks.EntriesPage" />
 
   <style name="Chunks.EntriesPage.View">
+    <item name="android:paddingTop">8dp</item>
+    <item name="android:paddingBottom">8dp</item>
+    <item name="android:clipToPadding">false</item>
     <item name="android:background">@color/white</item>
   </style>
 
