--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
   <color name="azure_two">#00A5F7</color>
   <color name="white_54_on_deep_sky_blue">#76C2E4</color>
   <color name="black_38">#61000000</color>
+  <color name="black_54">#8A000000</color>
   <color name="white">#FFFFFF</color>
   <color name="alabaster">#FAFAFA</color>
   <color name="black">#000000</color>
