--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
-  <style name="AppTheme"
-    parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/alabaster</item>
     <item name="colorPrimary">@color/cerulean</item>
     <item name="colorAccent">@color/azure_two</item>
@@ -50,6 +49,9 @@
     <item name="android:inputType">text</item>
     <item name="android:paddingLeft">16dp</item>
     <item name="android:paddingRight">16dp</item>
+    <item name="android:textColorHint">@color/black_54</item>
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">16sp</item>
   </style>
 
   <style name="Chunks.EntriesPage" />
@@ -70,9 +72,14 @@
     <item name="android:paddingBottom">4dp</item>
   </style>
 
-  <style name="Chunks.EntryWidget.CheckBox"
-    parent="AppTheme">
+  <style name="Chunks.EntryWidget.CheckBox" parent="AppTheme">
     <item name="android:theme">@style/AppTheme.CheckBox</item>
+  </style>
+
+  <style name="Chunks.EntryWidget.Text">
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:lineSpacingExtra">6sp</item>
   </style>
 
 </resources>
