--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -3,6 +3,7 @@
   <string name="yesterday">Yesterday</string>
   <string name="today">Today</string>
   <string name="tomorrow">Tomorrow</string>
+  <string name="sometime">Sometime</string>
   <string name="settings">Settings</string>
   <string name="add_a_new_task">Add a new task…</string>
   <string name="emoji_cross_mark">❌</string>
