--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -2,7 +2,7 @@
 
   <string name="today">Today</string>
   <string name="tomorrow">Tomorrow</string>
-  <string name="sometime">Sometime</string>
+  <string name="later">Later</string>
   <string name="settings">Settings</string>
   <string name="add_a_new_task">Add a new task…</string>
   <string name="emoji_cross_mark">❌</string>
