--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
 
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme"
+    parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@color/alabaster</item>
     <item name="android:statusBarColor">@color/lochmara</item>
     <item name="colorPrimary">@color/cerulean</item>
@@ -73,7 +74,8 @@
     <item name="android:paddingBottom">4dp</item>
   </style>
 
-  <style name="Chunks.EntryWidget.CheckBox" parent="AppTheme">
+  <style name="Chunks.EntryWidget.CheckBox"
+    parent="AppTheme">
     <item name="android:theme">@style/AppTheme.CheckBox</item>
   </style>
 
@@ -82,5 +84,19 @@
     <item name="android:textSize">16sp</item>
     <item name="android:lineSpacingExtra">6sp</item>
   </style>
+
+  <style name="Chunks.EntryWidget.Icon">
+    <item name="android:gravity">center</item>
+    <item name="android:background">@drawable/chunks_entrywidget_icon_background</item>
+  </style>
+
+  <style name="Chunks.EntryWidget.Icon.MoveLeft"
+    parent="Chunks.EntryWidget.Icon" />
+
+  <style name="Chunks.EntryWidget.Icon.MoveRight"
+    parent="Chunks.EntryWidget.Icon" />
+
+  <style name="Chunks.EntryWidget.Icon.Delete"
+    parent="Chunks.EntryWidget.Icon" />
 
 </resources>
