--- a/mobile/src/main/res/layout/view_chunks_tab.xml
+++ b/mobile/src/main/res/layout/view_chunks_tab.xml
@@ -4,4 +4,4 @@
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_weight="100"
-  android:minHeight="@dimen/min_touch_area" />
+  android:minHeight="56sp" />
