--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -15,17 +15,11 @@
 
   <style name="Chunks" />
 
-  <style name="Chunks.Toolbar" />
-
-  <style name="Chunks.Toolbar.Title">
-    <item name="android:textColor">@color/white</item>
-    <item name="android:textSize">20sp</item>
-    <item name="textFont">robotoMedium</item>
-  </style>
-
   <style name="Chunks.TabsPagerNavigationWidget" />
 
   <style name="Chunks.TabsPagerNavigationWidget.View">
+    <item name="android:background">@color/azure</item>
+    <item name="android:elevation">5dp</item>
     <item name="tabLayoutId">@layout/view_chunks_tab</item>
     <item name="tabsLeftPadding">0dp</item>
     <item name="indicatorColor">@color/white</item>
