--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -90,7 +90,7 @@
   <style name="Chunks.EntryWidget.Icon.MoveRight"
     parent="Chunks.EntryWidget.Icon" />
 
-  <style name="Chunks.EntryWidget.Icon.Delete"
+  <style name="Chunks.EntryWidget.Icon.Menu"
     parent="Chunks.EntryWidget.Icon" />
 
 </resources>
