--- a/mobile/src/main/res/values/ids.xml
+++ b/mobile/src/main/res/values/ids.xml
@@ -7,4 +7,5 @@
   <item name="action_move_to_tomorrow" type="id" />
   <item name="action_move_to_later" type="id" />
   <item name="action_delete" type="id" />
+  <item name="action_edit" type="id" />
 </resources>
