--- a/mobile/src/main/res/layout/merge_entry.xml
+++ b/mobile/src/main/res/layout/merge_entry.xml
@@ -43,6 +43,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
+    android:layout_marginBottom="3dp"
     android:minWidth="48dp"
     android:minHeight="48dp"
     android:text="@string/entry_widget_menu" />
