--- a/mobile/src/main/res/layout/merge_chunks_screen.xml
+++ b/mobile/src/main/res/layout/merge_chunks_screen.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <com.ataulm.chunks.TabsPagerNavigationWidget
-    android:id="@+id/chunks_screen_pager_navigation_widget"
-    style="@style/Chunks.TabsPagerNavigationWidget.View"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/chunks_screen_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="52sp"
+        android:layout_marginTop="52sp" />
 
-  <android.support.v4.view.ViewPager
-    android:id="@+id/chunks_screen_view_pager"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="100" />
+    <com.ataulm.chunks.TabsPagerNavigationWidget
+        android:id="@+id/chunks_screen_pager_navigation_widget"
+        style="@style/Chunks.TabsPagerNavigationWidget.View"
+        android:layout_width="match_parent"
+        android:layout_height="56sp" />
 
-  <com.ataulm.chunks.EntryInputWidget
-    android:id="@+id/chunks_screen_empty_input_widget"
-    style="@style/Chunks.EntryInputWidget.View"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="56dp" />
+    <com.ataulm.chunks.EntryInputWidget
+        android:id="@+id/chunks_screen_empty_input_widget"
+        style="@style/Chunks.EntryInputWidget.View"
+        android:layout_width="match_parent"
+        android:layout_height="56sp"
+        android:layout_gravity="bottom" />
 
 </merge>
