--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,96 +1,93 @@
 <resources>
 
-  <style name="AppTheme"
-    parent="Theme.AppCompat.Light.NoActionBar">
-    <item name="android:windowBackground">@color/alabaster</item>
-    <item name="android:statusBarColor">@color/lochmara</item>
-    <item name="colorPrimary">@color/cerulean</item>
-    <item name="colorAccent">@color/azure_two</item>
-  </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/alabaster</item>
+        <item name="android:statusBarColor">@color/lochmara</item>
+        <item name="colorPrimary">@color/cerulean</item>
+        <item name="colorAccent">@color/azure_two</item>
+    </style>
 
-  <style name="AppTheme.CheckBox">
-    <item name="colorControlNormal">@color/black_38</item>
-    <item name="colorControlActivated">@color/azure_two</item>
-  </style>
+    <style name="AppTheme.CheckBox">
+        <item name="colorControlNormal">@color/black_38</item>
+        <item name="colorControlActivated">@color/azure_two</item>
+    </style>
 
-  <style name="Chunks" />
+    <style name="Chunks" />
 
-  <style name="Chunks.TabsPagerNavigationWidget" />
+    <style name="Chunks.TabsPagerNavigationWidget" />
 
-  <style name="Chunks.TabsPagerNavigationWidget.View">
-    <item name="android:background">@color/azure</item>
-    <item name="android:elevation">5dp</item>
-    <item name="tabLayoutId">@layout/view_chunks_tab</item>
-    <item name="tabsLeftPadding">0dp</item>
-    <item name="indicatorColor">@color/white</item>
-    <item name="indicatorHeight">4dp</item>
-  </style>
+    <style name="Chunks.TabsPagerNavigationWidget.View">
+        <item name="android:background">@color/azure</item>
+        <item name="android:elevation">5dp</item>
+        <item name="tabLayoutId">@layout/view_chunks_tab</item>
+        <item name="tabsLeftPadding">0dp</item>
+        <item name="indicatorColor">@color/white</item>
+        <item name="indicatorHeight">4dp</item>
+    </style>
 
-  <style name="Chunks.TabsPagerNavigationWidget.Tab">
-    <item name="android:gravity">center</item>
-    <item name="android:textColor">@color/day_tabs_tab_text</item>
-    <item name="android:textSize">18sp</item>
-    <item name="textFont">robotoRegular</item>
-  </style>
+    <style name="Chunks.TabsPagerNavigationWidget.Tab">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/day_tabs_tab_text</item>
+        <item name="android:textSize">18sp</item>
+        <item name="textFont">robotoRegular</item>
+    </style>
 
-  <style name="Chunks.EntryInputWidget" />
+    <style name="Chunks.EntryInputWidget" />
 
-  <style name="Chunks.EntryInputWidget.View">
-    <item name="android:background">@color/white</item>
-    <item name="android:elevation">5dp</item>
-  </style>
+    <style name="Chunks.EntryInputWidget.View">
+        <item name="android:background">@color/white</item>
+        <item name="android:elevation">5dp</item>
+    </style>
 
-  <style name="Chunks.EntryInputWidget.EditText">
-    <item name="android:background">@null</item>
-    <item name="android:inputType">text</item>
-    <item name="android:paddingLeft">16dp</item>
-    <item name="android:paddingRight">16dp</item>
-    <item name="android:textColorHint">@color/black_54</item>
-    <item name="android:textColor">@color/black</item>
-    <item name="android:textSize">16sp</item>
-  </style>
+    <style name="Chunks.EntryInputWidget.EditText">
+        <item name="android:background">@null</item>
+        <item name="android:inputType">text</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textColorHint">@color/black_54</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
-  <style name="Chunks.Page" />
+    <style name="Chunks.Page" />
 
-  <style name="Chunks.Page.View">
-    <item name="android:paddingTop">4dp</item>
-    <item name="android:paddingBottom">4dp</item>
-    <item name="android:clipToPadding">false</item>
-  </style>
+    <style name="Chunks.Page.View">
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:clipToPadding">false</item>
+    </style>
 
-  <style name="Chunks.Item" />
+    <style name="Chunks.Item" />
 
-  <style name="Chunks.Item.View">
-    <item name="android:background">@drawable/chunks_entrywidget_background</item>
-    <item name="android:paddingLeft">8dp</item>
-    <item name="android:paddingTop">4dp</item>
-    <item name="android:paddingRight">0dp</item>
-    <item name="android:paddingBottom">4dp</item>
-  </style>
+    <style name="Chunks.Item.View">
+        <item name="android:background">@drawable/chunks_entrywidget_background</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingBottom">4dp</item>
+    </style>
 
-  <style name="Chunks.Item.CheckBox"
-    parent="AppTheme">
-    <item name="android:theme">@style/AppTheme.CheckBox</item>
-  </style>
+    <style name="Chunks.Item.CheckBox" parent="AppTheme">
+        <item name="android:theme">@style/AppTheme.CheckBox</item>
+    </style>
 
-  <style name="Chunks.Item.Text">
-    <item name="android:textColor">@color/black</item>
-    <item name="android:textSize">16sp</item>
-    <item name="android:lineSpacingExtra">6sp</item>
-  </style>
+    <style name="Chunks.Item.Text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+    </style>
 
-  <style name="Chunks.Item.Icon">
-    <item name="android:gravity">center</item>
-    <item name="android:background">@drawable/chunks_entrywidget_icon_background</item>
-  </style>
+    <style name="Chunks.Item.Icon">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/chunks_entrywidget_icon_background</item>
+    </style>
 
-  <style name="Chunks.Item.Icon.MoveLeft"
-    parent="Chunks.Item.Icon" />
+    <style name="Chunks.Item.Icon.MoveLeft" parent="Chunks.Item.Icon" />
 
-  <style name="Chunks.Item.Icon.MoveRight"
-    parent="Chunks.Item.Icon" />
+    <style name="Chunks.Item.Icon.MoveRight" parent="Chunks.Item.Icon" />
 
-  <style name="Chunks.Item.Icon.Menu"
-    parent="Chunks.Item.Icon" />
+    <style name="Chunks.Item.Icon.Menu" parent="Chunks.Item.Icon">
+        <item name="android:scaleType">center</item>
+    </style>
 
 </resources>
