--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
   <color name="black_54">#8A000000</color>
   <color name="white">#FFFFFF</color>
   <color name="alabaster">#FAFAFA</color>
+  <color name="gray">#9E9E9E</color>
   <color name="black">#000000</color>
 
 </resources>
