--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -11,5 +11,7 @@
   <string name="move_to_later">Move to Later</string>
   <string name="edit">Edit</string>
   <string name="delete">Delete</string>
+  <string name="move_up">Move up</string>
+  <string name="move_down">Move down</string>
 
 </resources>
