--- a/mobile/src/main/res/layout/merge_chunks_page.xml
+++ b/mobile/src/main/res/layout/merge_chunks_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <android.support.v7.widget.RecyclerView
+  <com.ataulm.chunks.ChunkRecyclerView
     android:id="@+id/chunks_page_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
