--- a/mobile/src/main/res/layout/merge_chunks_page.xml
+++ b/mobile/src/main/res/layout/merge_chunks_page.xml
@@ -11,6 +11,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:text="what's next?" />
+    android:text="@string/empty_chunk" />
 
 </merge>
