--- a/mobile/src/main/res/values/translatable_strings.xml
+++ b/mobile/src/main/res/values/translatable_strings.xml
@@ -13,5 +13,6 @@
   <string name="delete">Delete</string>
   <string name="move_up">Move up</string>
   <string name="move_down">Move down</string>
+  <string name="whats_next">what\'s next?</string>
 
 </resources>
