--- a/mobile/src/main/res/layout/merge_item.xml
+++ b/mobile/src/main/res/layout/merge_item.xml
@@ -4,9 +4,18 @@
     tools:background="@color/white"
     tools:layout_height="wrap_content"
     tools:layout_width="match_parent"
-    tools:paddingLeft="16dp"
-    tools:paddingRight="16dp"
-    tools:parentTag="LinearLayout">
+    tools:paddingLeft="8dp"
+    tools:paddingRight="0dp"
+    tools:parentTag="android.widget.LinearLayout">
+
+
+    <ImageView
+        android:id="@+id/item_drag_handle"
+        style="@style/Chunks.Item.Icon.DragHandle"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/chunks_item_drag_handle" />
 
     <CheckBox
         android:id="@+id/item_check_box"
