--- a/mobile/src/main/res/layout/view_chunk_item.xml
+++ b/mobile/src/main/res/layout/view_chunk_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ataulm.chunks.ItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ataulm.chunks.ItemRowView xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/Chunks.Item.View"
   android:layout_width="match_parent"
   android:layout_height="wrap_content" />
