--- a/mobile/src/main/res/layout/merge_item.xml
+++ b/mobile/src/main/res/layout/merge_item.xml
@@ -16,9 +16,8 @@
         android:paddingEnd="12sp"
         android:src="@drawable/chunks_item_drag_handle" />
 
-    <CheckBox
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/item_check_box"
-        style="@style/Chunks.Item.CheckBox"
         android:layout_width="wrap_content"
         android:layout_height="48sp" />
 
