--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,26 +1,15 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/lochmara</item>
-        <item name="colorPrimary">@color/cerulean</item>
-        <item name="colorAccent">@color/azure_two</item>
-    </style>
-
-    <style name="AppTheme.CheckBox">
-        <item name="colorControlNormal">@color/black_38</item>
-        <item name="colorControlActivated">@color/azure_two</item>
-    </style>
-
     <style name="Chunks" />
 
     <style name="Chunks.TabsPagerNavigationWidget" />
 
     <style name="Chunks.TabsPagerNavigationWidget.View">
-        <item name="android:background">@color/azure</item>
+        <item name="android:background">?attr/colorPrimary</item>
         <item name="android:elevation">5dp</item>
         <item name="tabLayoutId">@layout/view_chunks_tab</item>
         <item name="tabsLeftPadding">0dp</item>
-        <item name="indicatorColor">@color/white</item>
+        <item name="indicatorColor">?attr/colorOnPrimary</item>
         <item name="indicatorHeight">4dp</item>
     </style>
 
@@ -34,7 +23,7 @@
     <style name="Chunks.EntryInputWidget" />
 
     <style name="Chunks.EntryInputWidget.View">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">?attr/colorSurface</item>
         <item name="android:elevation">5dp</item>
     </style>
 
@@ -43,8 +32,8 @@
         <item name="android:inputType">text</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
-        <item name="android:textColorHint">@color/black_54</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/on_background_54</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -59,17 +48,13 @@
     <style name="Chunks.Item" />
 
     <style name="Chunks.Item.View">
-        <item name="android:background">@drawable/chunks_entrywidget_background</item>
+        <item name="android:background">?attr/colorSurface</item>
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
     </style>
 
-    <style name="Chunks.Item.CheckBox" parent="AppTheme">
-        <item name="android:theme">@style/AppTheme.CheckBox</item>
-    </style>
-
     <style name="Chunks.Item.Text">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
         <item name="android:textSize">16sp</item>
         <item name="android:lineSpacingExtra">6sp</item>
     </style>
