--- a/mobile/src/main/res/values/themes.xml
+++ b/mobile/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Theme.Chunks" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Chunks" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimaryDark">@color/lochmara</item>
         <item name="colorPrimary">@color/azure</item>
         <item name="colorOnPrimary">@color/white</item>
