--- a/mobile/src/main/res/drawable/chunks_entrywidget_icon_background.xml
+++ b/mobile/src/main/res/drawable/chunks_entrywidget_icon_background.xml
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-  android:color="@color/on_background_12" />
+    android:color="@color/on_background_12">
+    <item android:id="@android:id/mask">
+        <shape android:shape="oval">
+            <solid android:color="#FF00FF" />
+        </shape>
+    </item>
+</ripple>
+
